--- a/matman/items/templates/items/scheme_create.html
+++ b/matman/items/templates/items/scheme_create.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}Add Material{% endblock %}
+{% block title %}Add Item{% endblock %}
 
 {% block content %}
 <h1>Create new Scheme</h1>
