--- a/matman/items/templates/header.html
+++ b/matman/items/templates/header.html
@@ -13,15 +13,15 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url "list-material" %}" class="nav-link{% if active == 'search' %} active{% endif %}" aria-current="page">
+                    <a href="{% url "list-item" %}" class="nav-link{% if active == 'search' %} active{% endif %}" aria-current="page">
                         <i class="bi bi-search"></i>
                         <spa>Search</spa>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url "add-material" %}" class="nav-link{% if active == 'add' %} active{% endif %}" aria-current="page">
+                    <a href="{% url "add-item" %}" class="nav-link{% if active == 'add' %} active{% endif %}" aria-current="page">
                         <i class="bi bi-plus-square"></i>
-                        <span>Add Material</span>
+                        <span>Add Item</span>
                     </a>
                 </li>
                 <li class="nav-item">
