--- a/matman/items/templates/items/item_detail.html
+++ b/matman/items/templates/items/item_detail.html
@@ -3,7 +3,7 @@
 {% load matman_tags %}
 {% load crispy_forms_tags %}
 
-{% block title %}Material Details{% endblock %}
+{% block title %}Item Details{% endblock %}
 
 {% block scripts %}
 <script type="text/javascript" src="{% static "js/autocomplete.js" %}"></script>
@@ -21,7 +21,7 @@
         <span>Borrow</span>
     </a>
     {% endif %}
-    <a class="btn btn-outline-primary" href="{% url "material-edit" object.identifier %}">
+    <a class="btn btn-outline-primary" href="{% url "item-edit" object.identifier %}">
         <i class="bi bi-pencil-square"></i>
         <spa>Edit</spa>
     </a>
@@ -31,7 +31,7 @@
         <spa>Return Item</spa>
     </a>
     {% endif %}
-    <a class="btn btn-outline-primary" href="{% url "add-material" %}?reference={{ object.identifier }}">
+    <a class="btn btn-outline-primary" href="{% url "add-item" %}?reference={{ object.identifier }}">
         <i class="bi bi-intersect"></i>
         <spa>Copy/Clone</spa>
     </a>
@@ -58,7 +58,7 @@
                 <td>{{ object.serial_number }}</td>
             </tr>
             <tr>
-                <th>Material Number:</th>
+                <th>Item Number:</th>
                 <td>{{ object.part_number }}</td>
             </tr>
             <tr>
@@ -77,7 +77,7 @@
                 <th>Tags:</th>
                 <td>
                     {% for tag in object.tags.all %}
-                    <a href="{% url "list-material" %}?tags__name={{ tag }}" class="badge text-bg-light">{{ tag }}</a>
+                    <a href="{% url "list-item" %}?tags__name={{ tag }}" class="badge text-bg-light">{{ tag }}</a>
                     {% endfor %}
                 </td>
             </tr>
