--- a/matman/items/templates/items/item_edit.html
+++ b/matman/items/templates/items/item_edit.html
@@ -3,7 +3,7 @@
 {% load matman_tags %}
 {% load crispy_forms_tags %}
 
-{% block title %}Edit Material{% endblock %}
+{% block title %}Edit Item{% endblock %}
 
 {% block scripts %}
 <script type="text/javascript" src="{% static "js/autocomplete.js" %}" defer></script>
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block content %}
-<h1>Edit material {{ object }}</h1>
+<h1>Edit item {{ object }}</h1>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {% crispy form %}
