--- a/matman/items/templates/items/slideshow.html
+++ b/matman/items/templates/items/slideshow.html
@@ -1,8 +1,8 @@
 {% load static %}
-<div id="materialCarousel" class="carousel slide bg-dark justify-content-center p-3" data-bs-ride="true">
+<div id="itemCarousel" class="carousel slide bg-dark justify-content-center p-3" data-bs-ride="true">
   <div class="carousel-indicators">
     {% for picture in pictures.all %}
-    <button type="button" data-bs-target="#materialCarousel" data-bs-slide-to="{{ forloop.counter0 }}" {% if not forloop.counter0 %}class="active"{% endif %} aria-current="true" aria-label="Slide {{ forloop.counter }}"></button>
+    <button type="button" data-bs-target="#itemCarousel" data-bs-slide-to="{{ forloop.counter0 }}" {% if not forloop.counter0 %}class="active"{% endif %} aria-current="true" aria-label="Slide {{ forloop.counter }}"></button>
     {% endfor %}
   </div>
   <div class="carousel-inner">
@@ -18,11 +18,11 @@
     </div>
     {% endfor %}
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#materialCarousel" data-bs-slide="prev">
+  <button class="carousel-control-prev" type="button" data-bs-target="#itemCarousel" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#materialCarousel" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" data-bs-target="#itemCarousel" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
