--- a/matman/items/templates/items/mail/comment_notification.html
+++ b/matman/items/templates/items/mail/comment_notification.html
@@ -8,7 +8,7 @@
     {% if recipient == editor %}
     You have
     {% else %}
-    <a href="https://{{ site.domain }}{% url "profile" editor.pk %}" class="link-primary">
+    <a href="https://{{ site.domain }}{% url "profile" editor.username %}" class="link-primary">
         {% if editor.first_name %}
         {{ editor.first_name }} {{ editor.first_name }}
         {% else %}
