--- a/matman/items/templates/items/mail/borrow_notification.html
+++ b/matman/items/templates/items/mail/borrow_notification.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 <p>
-    Hello {{ user.get_full_name }},<br>
+    Hello {{ recipient.get_full_name }},<br>
     <br>
     {% if recipient == editor %}
     You have
