Use only first_name for greeting in mail templates
Signed-off-by: slarag <58182961+Slarag@users.noreply.github.com>

--- a/matman/items/templates/items/mail/borrow_notification.html
+++ b/matman/items/templates/items/mail/borrow_notification.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 <p>
-    Hello {{ recipient.get_full_name }},<br>
+    Hello {{ recipient.first_name }},<br>
     <br>
     {% if recipient == editor %}
     You have
