--- a/matman/items/templates/items/mail/borrow_reminder.html
+++ b/matman/items/templates/items/mail/borrow_reminder.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 <p>
-    Hello {{ user.get_full_name }},<br>
+    Hello {{ user.first_name }},<br>
     <br>
     You have currently borrowed the following materials and their return date is due:
 </p>
